renamed css class to a clearer one

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" type="text/css" href="dataviu.css">
 </head>
 <body>
-    <div class="fluidsize"></div>
-    <canvas class="fluidsize"></canvas>
+    <div class="handle-resize"></div>
+    <canvas class="handle-resize"></canvas>
     <div id="log"></div>
 </body>
 </html>
