added an SVG area to the demo

--- a/index.html
+++ b/index.html
@@ -6,8 +6,20 @@
     <link rel="stylesheet" type="text/css" href="dataviu.css">
 </head>
 <body>
+    <h1>resize the window</h1>
     <div class="handle-resize"></div>
     <canvas class="handle-resize"></canvas>
+    <svg class="handle-resize">
+        <style>
+                text {
+                        font: 30px 'Arial';
+                        text-rendering: optimizeLegibility;
+                    }
+            </style>
+            <g>
+                <text y="30"></text>
+            </g>
+    </svg>
     <div id="log"></div>
 </body>
 </html>
